--- a/VSSwitcher/App.xaml
+++ b/VSSwitcher/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="VSSwitcher.App"
+    x:Class="VSSwitcher.Application"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:VSSwitcher"
